7/22/2010
	- Fix LOC record parsing to allow negative altitudes.
	  (based on a patch from William Kocik <wkocik@verisign.com>)

7/21/2010
	- The changes to TSIG verification in 2.0.6 didn't work correctly for
	  stream verification; specifically, the state was only set on the
	  first Message in the stream.
	  (reported by William Kocik <wkocik@verisign.com>)

5/12/2010
	- Add support for determining resolver configuration on
	  Japanese Windows.  (translation and original patch from
	  Brett Wooldridge <brettw@users.sourceforge.net>)

5/6/2010
	- Add support for building an OSGi bundle (patch from
	  Markus Alexander Kuppe <lemmster@users.sourceforge.net>).

5/2/2010
	- Rewrite DNSSEC support.

4/15/2010
	- Fix a hang that could occur when using the dnsjava service provider
	  on Windows (initial patch from <jy123@users.sourceforge.net>).

11/21/2009
	- 2.0.8 released

11/10/2009
	- Fix the conversion of NSEC/NSEC3 bitmaps into wire format.
	  (Klaus Malorny <Klaus.Malorny@knipp.de>, also reported by
	  Tom <808131@gmail.com>).

10/01/2009
	- Properly initialize the Date objects used in RRSIG (and other)
	  records, so that any unused fields are cleared.
	  (Klaus Malorny <Klaus.Malorny@knipp.de>)

9/25/2009
	- 2.0.7 released
	- Add support for detecting the configured nameservers on the Android
	  platform.  (patch from Arnt Gulbrandsen <arnt@gulbrandsen.priv.no>)

9/16/2009
	- When determining the nameservers to use, if the
	  sun.net.dns.ResolverConfiguration class returns an empty list, ignore
	  it. (based on an anonymous patch).
	- Make the Name, Record (and all subclasses), RRset, and Zone classes
	  implement Serializable.
	  (based on a patch from Patrick <psp294@users.sourceforge.net>)

9/15/2009
	- Add a constant for the REVOKE DNSKEY flag.
	  (patch from Wolfgang Nagele <dreamguard@users.sourceforge.net>)
	- ReverseMap.fromAddress(String) should support both IPv4 and IPv6
	  addresses.